better color scheme, fix toggleBtn on smaller screen display, add subtle animation on changing theme

--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -17,6 +17,8 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  transition: var(--trans-2x);
 }
 
 // Reset margin, padding and inherit box-sizing for all elements
